--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -909,67 +909,42 @@ plot_grid(ess_mu_naive, ess_mu_active, ncol = 2)
 
 ## Quantifying transcriptional variability using BASiCS
 
-In `r Biocpkg("scran")`, the squared coefficient of variation (CV^2^) is used 
-as a proxy for transcriptional variability within a population of cells
-Instead, `r Biocpkg("BASiCS")` uses gene-specific over-dispersion 
-parameters $\delta_i$ for this purpose. 
-As seen in Fig .. these estimates are highly correlated. 
-As seen in Figures \@ref(fig:dispersion-vs-mean)A and 
-\@ref(fig:dispersion-vs-mean)B, both variability measures are confounded by 
-differences in mean expression, e.g. highly expressed genes tend to exhibit 
-lower variability according to these metrics (note that the `BASiCS_ShowFit` 
-function can be used to explore this relationship, but we generated the plot 
-manually to demonstrate how users can extract this information from a 
-`BASiCS_MCMC` object). 
-
-Recently [@Eling2018], we extended `r Biocpkg("BASiCS")` to explicitly model 
-the mean-variability relationship by performing an internal regression between 
-the over-dispersion and mean expression parameters, as visualised in Figure 
-\@ref(fig:dispersion-vs-mean). This results in the $\epsilon$ parameter, a measure of variability that is not confounded by mean expression. This *residual* 
-over-dispersion parameter quantifies the level of variability above or below 
-that expected based on the overall mean-variance relationship.
-Similarly, Kolodziejczyk _et al._ used the distance to a rolling 
-median (DM) along the mean-variability trend to correct for this confounding 
-factor [@Kolodziejczyk2015cell]. Here, we highlight how to obtain the residual
-variability estimates using `r Biocpkg("BASiCS")` and `r Biocpkg("scran")`.
-Further, we illustrate the mean-variance relationship for each variability 
-measures. For this analysis, we exclude genes that are not expressed in at 
-least 2 cells. These genes have missing (`NA`) values for the residual 
-over-dispersion parameter, $\epsilon$. These values can be obtained using the
-function `displayChainBASiCS`. We will use `r CRANpkg("ggpointdensity")` 
-to visualise the local density of genes along the axes of mean and variability.
-Here, we focus on naive cells, but a similar analysis for active cells would
-show very similar results.
-
-
-Figures \@ref(fig:dispersion-vs-mean)C and \@ref(fig:dispersion-vs-mean)D 
-show that variance and CV^2^ are both highly correlated with the 
-over-dispersion estimates from 
-`r Biocpkg("BASiCS")`. Again, for this comparison,
-we exclude genes that are not observed to be expressed in at least 2 cells,
-given that variability cannot meaningfully be quantified given a single 
-observation. Furthermore, Figure \@ref(fig:dispersion-vs-mean)A shows that the 
-over-dispersion parameters estimated by `r Biocpkg("BASiCS")` are strongly
-correlated with mean expression. 
-
-Neither the DM nor the residual over-dispersion estimates show association 
-with mean expression, as shown in Figures \@ref(fig:dispersion-vs-mean)B
-and \@ref(fig:dispersion-vs-mean)E.
-Furthermore, these mean-independent variability measures are highly correlated,
-as seen in Figure \@ref(fig:dispersion-vs-mean)F.
-These measures can be used to associate genomic features 
-[@Morgan2018;@Faure2017] or transcriptional dynamics [@Antolovic2017] with 
-gene expression variability.
-While the DM is calculated as a point estimate, `r Biocpkg("BASiCS")` stores 
-each posterior sample within the `BASiCS_Chain` object.
-They can be accessed using the `displayChain` function. This function
-extracts cell- or gene-specific samples in the form of a matrix, wherein each 
-column contains cell- or gene-specific parameters, and rows contain the MCMC 
-samples.
-
+Studying gene-level transcriptional variability can provide insights about the 
+regulation of gene expression, and how it relates to the properties of genomic 
+features (e.g. CpG island composition [@Morgan2018]), transcriptional dynamics 
+[@Antolovic2017] and aging [@Martinez-jimenez2017], among others. 
+The squared coefficient of variation (CV^2^) is widely used as a proxy for 
+transcriptional variability. 
+For example, here we obtain CV^2^ estimates for each gene using 
+`r Biocpkg("scran")` normalised expression counts as input. 
+Instead, `r Biocpkg("BASiCS")` infers transcriptional variability using 
+gene-specific over-dispersion parameters $\delta_i$ (see *Methods*). 
+Here, we compare these approaches focusing on naive CD4^+^ T cells (the 
+analysis for active cells shows similar results). 
+As seen in Figure \@ref(fig:dispersion-vs-mean)A, CV^2^ and posterior estimates 
+for $\delta_i$ are highly correlated. 
+Moreover, both variability metrics are confounded by differences in mean 
+expression, e.g. highly expressed genes tend to exhibit lower variability
+(Figures \@ref(fig:dispersion-vs-mean)B-C). 
+To remove this confounding, `r Biocpkg("scran")` and `r Biocpkg("BASiCS")`
+derive *residual variability* estimates as deviations with respect to an
+global mean-variability trend (see *Methods*).
+These are derived using the DM apprach [@Kolodziejczyk2015cell] and the
+residual over-dispersion parameters $\epsilon_i$ defined by [@Eling2018],
+respectively.
+For the naive CD4^+^ T data, both approaches led to strongly correlated 
+estimates (Figure \@ref(fig:dispersion-vs-mean)D) and, as expected, neither DM 
+or posterior estimates for $\epsilon_i$ are seen to be associated with
+mean expression (Figure \@ref(fig:dispersion-vs-mean)E-F). 
+However, unlike DM, the integrated approach implemented in `r Biocpkg("BASiCS")` 
+provides a direct measure of statistical uncertainty for these estimates. 
+As illustrated in the following sections, this enables gene-specific
+downstream inference such as differential variability analyses. 
 
 <!--- CV: Can we make the n_neigh smaller? --->
 
+ <!--- CV: add this when editing caption: Note that the `BASiCS_ShowFit` function can be used to generate panel B, but we generated the plot manually to demonstrate how users can extract this information from a `BASiCS_MCMC` object. For this analysis, we exclude genes that are not expressed in at least 2 cells. These genes have missing (`NA`) values for the residual over-dispersion parameter, $\epsilon$. We use `r CRANpkg("ggpointdensity")` to visualise the local density of genes along the axes of mean and variability. ---> 
+ 
 ```{r dispersion-vs-mean, fig.width=6, fig.height=6, fig.cap="Comparison of variability estimates and mean expression estimates using either BASiCS or using counts normalised with scaling normalisation factors estimated using scran. A: over-dispersion and mean expression estimates from BASiCS; B: residual over-dispersion and mean expression estimates from BASiCS; C: variance estimated using normalised counts using scran size factors against over-dispersion estimates from BASiCS; D: CV2 estimates and over-dispersion estimates from BASiCS; E: DM estimates and mean expression of normalised counts from scran; F: DM estimates from scran and residual over-dispersion estimates from BASiCS."}
 
 library("ggpointdensity")
@@ -1073,8 +1048,8 @@ g6 <- ggplot(parameter_df[ind_not_na, ]) +
   )
 
 plot_grid(
-  g3, g1, g2, 
-  g6, g4, g5, 
+  g1, g2, g3, 
+  g4, g5, g6, 
   labels = LETTERS[1:6],
   ncol = 3
 )
