--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -1083,20 +1083,37 @@ genes with low ESS when performing differential expression testing.
 \hypertarget{quantifying-transcriptional-variability-using-basics}{%
 \subsection{Quantifying transcriptional variability using BASiCS}\label{quantifying-transcriptional-variability-using-basics}}
 
-In \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}}, the squared coefficient of variation (CV\textsuperscript{2}) is used
-as a proxy for transcriptional variability within a population of cells
-Instead, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} uses gene-specific over-dispersion
-parameters \(\delta_i\) for this purpose.
-As seen in Fig .. these estimates are highly correlated.
-Both variability measures are confounded by differences in mean expression,
-e.g.~highly expressed genes tend to exhibit lower variability according to these
-metrics. For example, Figure \ref{fig:dispersion-vs-mean}A displays
-\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} posterior estimates for over-dispersion parameters
-inferred for the naive CD4\textsuperscript{+} T cells and how these relate to mean expression
-estimates (the \texttt{BASiCS\_ShowFit} function can be used to generate such a plot,
-but we will generate it manually to demonstrate how users can extract this
-information from a \texttt{BASiCS\_MCMC} object.
-A similar behaviour is observed for \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}} estimates (see Figure \ref{fig:dispersion-vs-mean}B).
+Studying gene-level transcriptional variability can provide insights about the
+regulation of gene expression, and how it relates to the properties of genomic
+features (e.g.~CpG island composition \citep{Morgan2018}), transcriptional dynamics
+\citep{Antolovic2017} and aging \citep{Martinez-jimenez2017}, among others.
+The squared coefficient of variation (CV\textsuperscript{2}) is widely used as a proxy for
+transcriptional variability.
+For example, here we obtain CV\textsuperscript{2} estimates for each gene using
+\emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}} normalised expression counts as input.
+Instead, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} infers transcriptional variability using
+gene-specific over-dispersion parameters \(\delta_i\) (see \emph{Methods}).
+Here, we compare these approaches focusing on naive CD4\textsuperscript{+} T cells (the
+analysis for active cells shows similar results).
+As seen in Figure \ref{fig:dispersion-vs-mean}A, CV\textsuperscript{2} and posterior estimates
+for \(\delta_i\) are highly correlated.
+Moreover, both variability metrics are confounded by differences in mean
+expression, e.g.~highly expressed genes tend to exhibit lower variability
+(Figures \ref{fig:dispersion-vs-mean}B-C).
+To remove this confounding, \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}} and \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}
+derive \emph{residual variability} estimates as deviations with respect to an
+global mean-variability trend (see \emph{Methods}).
+These are derived using the DM apprach \citep{Kolodziejczyk2015cell} and the
+residual over-dispersion parameters \(\epsilon_i\) defined by \citep{Eling2018},
+respectively.
+For the naive CD4\textsuperscript{+} T data, both approaches led to strongly correlated
+estimates (Figure \ref{fig:dispersion-vs-mean}D) and, as expected, neither DM
+or posterior estimates for \(\epsilon_i\) are seen to be associated with
+mean expression (Figure \ref{fig:dispersion-vs-mean}E-F).
+However, unlike DM, the integrated approach implemented in \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}
+provides a direct measure of statistical uncertainty for these estimates.
+As illustrated in the following sections, this enables gene-specific
+downstream inference such as differential variability analyses.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1201,8 +1218,8 @@ A similar behaviour is observed for \emph{\href{https://bioconductor.org/package
 \NormalTok{  )}
 
 \KeywordTok{plot_grid}\NormalTok{(}
-\NormalTok{  g3, g1, g2, }
-\NormalTok{  g6, g4, g5, }
+\NormalTok{  g1, g2, g3, }
+\NormalTok{  g4, g5, g6, }
   \DataTypeTok{labels =}\NormalTok{ LETTERS[}\DecValTok{1}\OperatorTok{:}\DecValTok{6}\NormalTok{],}
   \DataTypeTok{ncol =} \DecValTok{3}
 \NormalTok{)}
@@ -1217,50 +1234,6 @@ A similar behaviour is observed for \emph{\href{https://bioconductor.org/package
 
 \caption{Comparison of variability estimates and mean expression estimates using either BASiCS or using counts normalised with scaling normalisation factors estimated using scran. A: over-dispersion and mean expression estimates from BASiCS; B: residual over-dispersion and mean expression estimates from BASiCS; C: variance estimated using normalised counts using scran size factors against over-dispersion estimates from BASiCS; D: CV2 estimates and over-dispersion estimates from BASiCS; E: DM estimates and mean expression of normalised counts from scran; F: DM estimates from scran and residual over-dispersion estimates from BASiCS.}\label{fig:dispersion-vs-mean}
 \end{figure}
-
-Recently \citep{Eling2018}, we extended \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} to explicitly model
-the mean-variability relationship by performing an internal regression between
-the over-dispersion and mean expression parameters, as visualised in Figure
-\ref{fig:dispersion-vs-mean}. This results in the \(\epsilon\) parameter, a measure of variability that is not confounded by mean expression. This \emph{residual}
-over-dispersion parameter quantifies the level of variability above or below
-that expected based on the overall mean-variance relationship.
-Similarly, Kolodziejczyk \emph{et al.} used the distance to a rolling
-median (DM) along the mean-variability trend to correct for this confounding
-factor \citep{Kolodziejczyk2015cell}. Here, we highlight how to obtain the residual
-variability estimates using \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} and \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}}.
-Further, we illustrate the mean-variance relationship for each variability
-measures. For this analysis, we exclude genes that are not expressed in at
-least 2 cells. These genes have missing (\texttt{NA}) values for the residual
-over-dispersion parameter, \(\epsilon\). These values can be obtained using the
-function \texttt{displayChainBASiCS}. We will use \emph{\href{https://CRAN.R-project.org/package=ggpointdensity}{ggpointdensity}}
-to visualise the local density of genes along the axes of mean and variability.
-Here, we focus on naive cells, but a similar analysis for active cells would
-show very similar results.
-
-Figures \ref{fig:dispersion-vs-mean}C and \ref{fig:dispersion-vs-mean}D
-show that variance and CV\textsuperscript{2} are both highly correlated with the
-over-dispersion estimates from
-\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}. Again, for this comparison,
-we exclude genes that are not observed to be expressed in at least 2 cells,
-given that variability cannot meaningfully be quantified given a single
-observation. Furthermore, Figure \ref{fig:dispersion-vs-mean}A shows that the
-over-dispersion parameters estimated by \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} are strongly
-correlated with mean expression.
-
-Neither the DM nor the residual over-dispersion estimates show association
-with mean expression, as shown in Figures \ref{fig:dispersion-vs-mean}B
-and \ref{fig:dispersion-vs-mean}E.
-Furthermore, these mean-independent variability measures are highly correlated,
-as seen in Figure \ref{fig:dispersion-vs-mean}F.
-These measures can be used to associate genomic features
-\citep{Morgan2018, Faure2017} or transcriptional dynamics \citep{Antolovic2017} with
-gene expression variability.
-While the DM is calculated as a point estimate, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} stores
-each posterior sample within the \texttt{BASiCS\_Chain} object.
-They can be accessed using the \texttt{displayChain} function. This function
-extracts cell- or gene-specific samples in the form of a matrix, wherein each
-column contains cell- or gene-specific parameters, and rows contain the MCMC
-samples.
 
 {\small\bibliography{Workflow.bib}}
 
